--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>To Do List</title>
+    <title>To Do List App</title>
 </head>
+
 <body>
-    
+
+    <div class="container">
+        <div class="stats-container">
+           <div class="details">
+            <h1>To Do List</h1>
+            <p>Don't give up</p>
+            <div id="progressBar">
+                <div id="progress"></div>
+            </div>
+           </div>
+           <div class="stats-numbers">
+            <p id="numbers">1 / 3</p>
+           </div>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
+
 </html>
