--- a/index.html
+++ b/index.html
@@ -12,17 +12,22 @@
 
     <div class="container">
         <div class="stats-container">
-           <div class="details">
-            <h1>To Do List</h1>
-            <p>Don't give up</p>
-            <div id="progressBar">
-                <div id="progress"></div>
+            <div class="details">
+                <h1>To Do List</h1>
+                <p>Don't give up</p>
+                <div id="progressBar">
+                    <div id="progress"></div>
+                </div>
             </div>
-           </div>
-           <div class="stats-numbers">
-            <p id="numbers">1 / 3</p>
-           </div>
+            <div class="stats-numbers">
+                <p id="numbers">1 / 3</p>
+            </div>
         </div>
+        <form>
+            <input type="text" placeholder="Write your task">
+            <button type="submit">+</button>
+        </form>
+        
     </div>
 
     <script src="script.js"></script>
