--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
                 <p id="numbers">1 / 3</p>
             </div>
         </div>
+
         <form>
             <input type="text" placeholder="Write your task">
             <button type="submit">+</button>
         </form>
+
+        <ul class="task-list"></ul>
         
     </div>
 
