stats-container css

--- a/index.html
+++ b/index.html
@@ -11,17 +11,21 @@
 <body>
 
     <div class="container">
+
         <div class="stats-container">
+
             <div class="details">
                 <h1>To Do List</h1>
-                <p>Don't give up</p>
+                <p>Don't give up!</p>
                 <div id="progressBar">
                     <div id="progress"></div>
                 </div>
             </div>
+
             <div class="stats-numbers">
                 <p id="numbers">1 / 3</p>
             </div>
+
         </div>
 
         <form>
@@ -30,7 +34,7 @@
         </form>
 
         <ul class="task-list"></ul>
-        
+
     </div>
 
     <script src="script.js"></script>
