--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         </div>
 
         <form>
-            <input type="text" placeholder="Write your task">
-            <button type="submit">+</button>
+            <input type="text" placeholder="Write your task" id="taskInput">
+            <button id="newTask" type="submit">+</button>
         </form>
 
         <ul class="task-list"></ul>
