--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <button id="newTask" type="submit">+</button>
         </form>
 
-        <ul class="task-list"></ul>
+        <ul id="task-list"></ul>
 
     </div>
 
@@ -41,3 +41,14 @@
 </body>
 
 </html>
+
+<div class="taskItem">
+    <div class="task">
+        <input type="checkbox" class="checkbox">
+        <p>Finish</p>
+    </div>
+    <div class="icons">
+        <img src="img/edit.png">
+        <img src="img/bin.png">
+    </div>
+</div>
